--- a/style.css
+++ b/style.css
@@ -1,51 +1,108 @@
 
-body{
+body {
     background-color: black;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
-h1{
+
+h1 {
     color: azure;
     background-color: rgb(188, 27, 142);
     height: 100px;
     text-align: center;
-    align-self: center;
+    line-height: 100px;
+    font-size: 2rem;
 }
-#body{
+
+#body {
     display: flex;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
+    justify-content: center;
     background-color: beige;
-    height: 300px;
-    align-items: center;
+    width: 100%;
+    padding: 1rem;
+    box-sizing: border-box;
 }
-.ele{
+
+.ele {
     border: 5px solid beige;
+    margin: 10px;
+    flex: 1 1 300px; /* Responsive width with min 300px */
+    max-width: 500px;
+    box-sizing: border-box;
 }
-input,select {
+
+input,
+select {
     color: black;
-    height: 60px;
-    width: 300px;
+    height: 3rem;
+    width: 100%;
+    max-width: 100%;
     border: 3px solid rgb(188, 27, 142);
-    border-radius: 10%;
+    border-radius: 10px;
     text-align: center;
-    font-size: large;
+    font-size: 1rem;
     font-style: italic;
+    box-sizing: border-box;
 }
-#output{
+
+#output {
     background-color: black;
     border: 5px solid black;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 1rem;
+    color: white;
 }
-div{
+
+div {
     background-color: beige;
     border: 5px solid rgb(188, 27, 142);
     margin-top: 5px;
-    font-size: larger;
+    font-size: 1.1rem;
+    box-sizing: border-box;
+    color: black;
 }
-button{
-    font-size: larger;
-    margin-bottom: 5px;
-    margin-left: 5px;
+
+button {
+    font-size: 1rem;
+    margin: 5px;
     background-color: rgb(188, 27, 142);
     color: azure;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
-p{
+
+button:hover {
+    background-color: rgb(160, 20, 120);
+}
+
+p {
     margin-left: 5px;
+    margin-right: 5px;
+    word-wrap: break-word;
+}
+
+/* 📱 Media Query for Small Screens */
+@media screen and (max-width: 600px) {
+    h1 {
+        font-size: 1.5rem;
+        height: auto;
+        line-height: normal;
+        padding: 1rem;
+    }
+
+    input,
+    select,
+    button {
+        font-size: 1rem;
+        width: 100%;
+    }
+
+    .ele {
+        flex: 1 1 100%;
+    }
 }
